# tripswitch-hs

./: .gitignore  LICENSE  README.md  tripswitch.cabal
.github/workflows/: ci.yml
examples/: Basic.hs  EffectSystem.hs  PureTesting.hs  TypedStateMachine.hs
src/: Tripswitch.hs
src/Tripswitch/: Admin.hs  Client.hs  Effect.hs  Typed.hs
src/Tripswitch/Admin/: Errors.hs  Types.hs
src/Tripswitch/Client/: Internal.hs
src/Tripswitch/Effect/: Interpreters.hs
test/Tripswitch/: AdminIntegrationSpec.hs  AdminSpec.hs  ClientSpec.hs  EffectSpec.hs  IntegrationSpec.hs  PropertySpec.hs  TypedSpec.hs
test/Tripswitch/Client/: InternalSpec.hs
